welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: Missing closing brace `}' assumed here
danse=true
^BDR2:2: error: '(' expected but identifier found.
while danse() {
      ^BDR2:24: error: illegal start of simple expression
}
^